tests/errors/err_undefined_goto.bas
10 PRINT "START"
20 GOTO 100
30 PRINT "END"
